--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+tokio-channel = "~0.1"
+reqwest = "~0.11"
+json = "~0.12"
+async-trait = "~0.1"
+hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
