--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 
-tokio-channel = "~0.1"
-reqwest = "~0.11"
-json = "~0.12"
 async-trait = "~0.1"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
+json = "~0.12"
+log = "~0.4"
+reqwest = "~0.11"
+tokio = { version = "~1.17", features = ["rt", "macros", "sync"] }
