--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 
-async-trait = "~0.1"
+anyhow = "~1.0"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 json = "~0.12"
 log = "~0.4"
 reqwest = "~0.11"
-tokio = { version = "~1.17", features = ["rt", "macros", "sync"] }
+tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }
