--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 json = "~0.12"
 log = "~0.4"
 reqwest = "~0.11"
+time = "~0.3"
 tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }
