--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2021"
 
 anyhow = "~1.0"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
-json = "~0.12"
 log = "~0.4"
 reqwest = "~0.11"
+serde = { version = "~1.0", features = ["derive"] }
+serde_json = "~1.0"
 time = "~0.3"
 tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }
