--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 time = "~0.3"
 tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }
+
+[dev-dependencies]
+simple_logger = "~2.1.0"
