--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "~1.0"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 log = "~0.4"
 reqwest = "~0.11"
+rolling-dual-crc = "~0.1"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 time = "~0.3"
