--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ reqwest = "~0.11"
 rolling-dual-crc = "~0.1"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
+sha1 = "~0.10"
 time = "~0.3"
 tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }
 
