--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 
 anyhow = "~1.0"
+digest = "~0.10"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 log = "~0.4"
 reqwest = "~0.11"
