--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           default: true
       - uses: actions-rs/cargo@v1
         with:
-          cwd: ./hd_api
+          working-directory: ./hd_api
           command: test
           args: --no-default-features --features=${{ matrix.features }}
 
