--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "~1.0"
 bytes = "~1.1"
 digest = "~0.10"
+filetime = "~0.2"
 futures = "~0.3"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 log = "~0.4"
