--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ edition = "2021"
 [dependencies]
 
 anyhow = "~1.0"
-bytes = "~1.1"
 digest = "~0.10"
 filetime = "~0.2"
-futures = "~0.3"
+futures-util = "~0.3"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 log = "~0.4"
 reqwest = { version = "~0.11", features = ["stream"] }
