--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 
 anyhow = "~1.0"
+async-trait = "0.1"
 digest = "~0.10"
 filetime = "~0.2"
 futures-util = "~0.3"
@@ -19,7 +20,7 @@ serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 sha1 = "~0.10"
 time = { version = "~0.3", features = ["serde"] }
-tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util", "io-std"] }
+tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util", "io-std", "time"] }
 
 [dev-dependencies]
 simple_logger = "~2.1.0"
