--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tokio = { version = "~1.32", features = ["rt", "macros", "sync", "fs", "io-util"
 
 [dev-dependencies]
 simple_logger = "~2.1.0"
+clap = { version = "~4.4", features = ["derive"] }
