--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,16 @@ filetime = "~0.2"
 futures-util = "~0.3"
 hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
 log = "~0.4"
-reqwest = { version = "~0.11", features = ["stream"] }
+reqwest = { version = "~0.11", features = ["stream", "native-tls"] }
 rolling-dual-crc = "~0.1"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 sha1 = "~0.10"
 time = { version = "~0.3", features = ["serde"] }
 tokio = { version = "~1.32", features = ["rt", "macros", "sync", "fs", "io-util", "io-std", "time"] }
+
+# websocket depends on hyper 0.10...
+#websocket = "0.26.5"
 
 [dev-dependencies]
 simple_logger = "~2.1.0"
