--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,7 @@ serde_json = "~1.0"
 sha1 = "~0.10"
 time = { version = "~0.3", features = ["serde"] }
 tokio = { version = "~1.32", features = ["rt", "macros", "sync", "fs", "io-util", "io-std", "time"] }
-
-# websocket depends on hyper 0.10...
-#websocket = "0.26.5"
+tokio-tungstenite = { version = "0.20" }
 
 [dev-dependencies]
 simple_logger = "~2.1.0"
