--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "~1.0"
 sha1 = "~0.10"
 time = { version = "~0.3", features = ["serde"] }
 tokio = { version = "~1.32", features = ["rt", "macros", "sync", "fs", "io-util", "io-std", "time"] }
-tokio-tungstenite = { version = "0.20" }
+tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 
 [dev-dependencies]
 simple_logger = "~2.1.0"
